--- a/html-files/index.html
+++ b/html-files/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link type="text/css" rel="stylesheet" href="../css-files/header-footer.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="Home Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="AKB">
+    <title>Home Page Real Estate Agency</title>
 </head>
 
 <body>
@@ -19,7 +21,7 @@
 
     <!--Footer-->
     <footer class="page-footer">
-        
+
     </footer>
 </body>
 </html>
