--- a/html-files/index.html
+++ b/html-files/index.html
@@ -11,7 +11,9 @@
 <body>
     <!--Header-->
     <header class="page-header">
-
+        <div id="header-logo">
+            
+        </div>
     </header>
 
     <!--Content-->
