--- a/html-files/index.html
+++ b/html-files/index.html
@@ -12,7 +12,18 @@
     <!--Header-->
     <header class="page-header">
         <div id="header-logo">
-            
+            <a href="./index.html">
+                <img src="../media/example_2.png">
+            </a>
+        </div>
+        <div class="header-search-bar">
+            <div class="search-container"> <!--Search Bar-->
+                <input type="text" id="searchInput" placeholder ="Search.......">
+                <button onclick ="search()">Search</buttom>
+            </div>
+            <div id="searchResults">
+                <script src="../js/script.js"></script>
+            </div>
         </div>
     </header>
 
@@ -26,4 +37,6 @@
 
     </footer>
 </body>
+
+<script src="../js-files/search-bar.js"></script>
 </html>
