--- a/html-files/index.html
+++ b/html-files/index.html
@@ -16,7 +16,7 @@
                 <img src="../media/example_2.png">
             </a>
         </div>
-        <div class="header-search-bar">
+        <div class="search-bar">
             <div class="search-container"> <!--Search Bar-->
                 <input type="text" id="searchInput" placeholder ="Search.......">
                 <button onclick ="search()">Search</buttom>
@@ -24,6 +24,11 @@
             <div id="searchResults">
                 <script src="../js/script.js"></script>
             </div>
+        </div>
+        <div id="header-icons">
+            <a href="./login.html">
+                <img src="../media/account.png">
+            </a>
         </div>
     </header>
 
