--- a/html-files/index.html
+++ b/html-files/index.html
@@ -29,6 +29,9 @@
             <a href="./login.html">
                 <img src="../media/account.png">
             </a>
+            <a href="./index.html">
+                <img src="../media/search.png">
+            </a>
         </div>
     </header>
 
