--- a/html-files/index.html
+++ b/html-files/index.html
@@ -32,6 +32,7 @@
             <a href="./index.html">
                 <img src="../media/search.png">
             </a>
+            <img src="../media/line.png">
         </div>
     </header>
 
