--- a/html-files/index.html
+++ b/html-files/index.html
@@ -34,6 +34,12 @@
             </a>
             <img src="../media/line.png">
         </div>
+        <div id="links-header">
+            <a href="./construction.html">Build</a>
+            <a href="./rent.html">Rent</a>
+            <a href="./sell.html">Sell</a>
+            <a href="./buy.html">Buy</a>
+        </div>
     </header>
 
     <!--Content-->
@@ -43,7 +49,22 @@
 
     <!--Footer-->
     <footer class="page-footer">
-
+        <div class="footer-about">
+            <a href="./about.html">About Us</a>
+            <a href="./contact.html">Contact Us</a>
+        </div>
+        <div class="footer-work">
+            <a href="./staff.html">Our Staff</a>
+            <a href="./work-for-us.html">Work</a>
+        </div>
+        <div class="footer-services-1">
+            <a href="./buy.html">Buy</a>
+            <a href="./sell.html">Sell</a>
+        </div>
+        <div class="footer-services-2">
+            <a href="./construction.html">Build</a>
+            <a href="./rent.html">Rent</a>
+        </div>
     </footer>
 </body>
 
