--- a/html-files/index.html
+++ b/html-files/index.html
@@ -65,6 +65,20 @@
             <a href="./construction.html">Build</a>
             <a href="./rent.html">Rent</a>
         </div>
+        <div class="social-media">
+            <a href="https://www.instagram.com/noroff/">
+                <img src="../media/instagram.png">
+            </a>
+            <a href="https://www.facebook.com/noroff">
+                <img src="../media/facebook.png">
+            </a>
+            <a href="https://www.youtube.com/channel/UCyDPAsKvRn8fkEM8IkQeLSQ">
+                <img src="../media/yotube.png">
+            </a>
+            <a href="https://twitter.com/noroff?lang=en">
+                <img src="../media/twiiter.png">
+            </a>
+        </div>
     </footer>
 </body>
 
