--- a/html-files/index.html
+++ b/html-files/index.html
@@ -50,22 +50,31 @@
     <!--Footer-->
     <footer class="page-footer">
         <div class="footer-about">
+            <p><b>About Us</b></p>
             <a href="./about.html">About Us</a>
+            <br>
             <a href="./contact.html">Contact Us</a>
         </div>
         <div class="footer-work">
+            <p><b>Our Work</b></p>
             <a href="./staff.html">Our Staff</a>
+            <br>
             <a href="./work-for-us.html">Work</a>
         </div>
         <div class="footer-services-1">
+            <p><b>Buy Or Sell</b></p>
             <a href="./buy.html">Buy</a>
+            <br>
             <a href="./sell.html">Sell</a>
         </div>
         <div class="footer-services-2">
+            <p><b>Build Or Rent</b></p>
             <a href="./construction.html">Build</a>
+            <br>
             <a href="./rent.html">Rent</a>
         </div>
         <div class="social-media">
+            <p><b>Social Media</b></p>
             <a href="https://www.instagram.com/noroff/">
                 <img src="../media/instagram.png">
             </a>
