--- a/html-files/index.html
+++ b/html-files/index.html
@@ -50,31 +50,31 @@
     <!--Footer-->
     <footer class="page-footer">
         <div class="footer-about">
-            <p><b>About Us</b></p>
+            <p>About Us</p>
             <a href="./about.html">About Us</a>
             <br>
             <a href="./contact.html">Contact Us</a>
         </div>
         <div class="footer-work">
-            <p><b>Our Work</b></p>
+            <p>Our Work</p>
             <a href="./staff.html">Our Staff</a>
             <br>
             <a href="./work-for-us.html">Work</a>
         </div>
         <div class="footer-services-1">
-            <p><b>Buy Or Sell</b></p>
+            <p>Buy Or Sell</p>
             <a href="./buy.html">Buy</a>
             <br>
             <a href="./sell.html">Sell</a>
         </div>
         <div class="footer-services-2">
-            <p><b>Build Or Rent</b></p>
+            <p>Build Or Rent</p>
             <a href="./construction.html">Build</a>
             <br>
             <a href="./rent.html">Rent</a>
         </div>
         <div class="social-media">
-            <p><b>Social Media</b></p>
+            <p>Social Media</p>
             <a href="https://www.instagram.com/noroff/">
                 <img src="../media/instagram.png">
             </a>
