--- a/html-files/index.html
+++ b/html-files/index.html
@@ -16,15 +16,6 @@
                 <img src="../media/example_2.png">
             </a>
         </div>
-        <div class="search-bar">
-            <div class="search-container"> <!--Search Bar-->
-                <input type="text" id="searchInput" placeholder ="Search.......">
-                <button onclick ="search()">Search</buttom>
-            </div>
-            <div id="searchResults">
-                <script src="../js/script.js"></script>
-            </div>
-        </div>
         <div id="header-icons">
             <a href="./login.html">
                 <img src="../media/account.png">
@@ -44,7 +35,19 @@
 
     <!--Content-->
     <main class="page-body">
-
+        <div class="hero-image-main">
+            <div class="hero-text-main">
+                <div class="search-bar">
+                    <div class="search-container"> <!--Search Bar-->
+                        <input type="text" id="searchInput" placeholder ="Search.......">
+                        <button onclick ="search()">Search</buttom>
+                    </div>
+                    <div id="searchResults">
+                        <script src="../js/script.js"></script>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!--Footer-->
