--- a/html-files/sell.html
+++ b/html-files/sell.html
@@ -16,15 +16,6 @@
                 <img src="../media/example_2.png">
             </a>
         </div>
-        <div class="search-bar">
-            <div class="search-container"> <!--Search Bar-->
-                <input type="text" id="searchInput" placeholder ="Search.......">
-                <button onclick ="search()">Search</buttom>
-            </div>
-            <div id="searchResults">
-                <script src="../js/script.js"></script>
-            </div>
-        </div>
         <div id="header-icons">
             <a href="./login.html">
                 <img src="../media/account.png">
@@ -44,7 +35,6 @@
 
     <!--Content-->
     <main class="page-body">
-
     </main>
 
     <!--Footer-->
@@ -90,3 +80,5 @@
         </div>
     </footer>
 </body>
+
+</html>
