Top Content - index
made the top picture with undone filters on the index page

--- a/html-files/index.html
+++ b/html-files/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
 <head>
     <link type="text/css" rel="stylesheet" href="../css-files/header-footer.css">
+    <link type="text/css" rel="stylesheet" href="../css-files/index-content.css">
     <meta charset="UTF-8">
     <meta name="Home Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AKB">
     <title>Home Page Real Estate Agency</title>
 </head>
 
+
 <body>
+
+    <script src="https://kit.fontawesome.com/2ef99fbf3a.js" crossorigin="anonymous">
+    </script>
+
     <!--Header-->
     <header class="page-header">
         <div id="header-logo">
@@ -32,6 +38,44 @@
 
     <!--Content-->
     <main class="page-body">
+
+        <div class="top-pic">
+            <img src="/photos/houseonahand.jpeg" alt="">
+            <div class="top-pic-content">
+                <div class="top-pic-text">
+                    <h2>with us you can sell, buy and look for your</h2>
+                    <h1>FUTURE HOME</h1>
+                </div>
+                <div class="top-pic-filters">
+                    <div class="filters">
+                        <div class="filter">
+                            <i class="fa-solid fa-location-dot" id="location-icon"></i>
+                            <div class="filter-text">
+                                <p>Location</p>
+                                <span>Search Location</span>
+                            </div>
+                        </div>
+                        <div class="filter">
+                            <i class="fa-solid fa-house-chimney"></i>
+                            <div class="filter-text">
+                                <p>Select Type</p>
+                                <span>Filter Type</span>
+                            </div>
+                        </div>
+                        <div class="filter">
+                            <i class="fa-solid fa-sack-dollar"></i>
+                            <div class="filter-text">
+                                <p>Budget</p>
+                                <span>Filter Budget</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="filter-results">
+                        <p>See Results</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!--Footer-->
