--- a/html-files/index.html
+++ b/html-files/index.html
@@ -39,6 +39,7 @@
     <!--Content-->
     <main class="page-body">
 
+        <!--Top Picture-->
         <div class="top-pic">
             <img src="/photos/houseonahand.jpeg" alt="">
             <div class="top-pic-content">
@@ -76,6 +77,54 @@
                 </div>
             </div>
         </div>
+
+        <!--Properties-->
+        <div class="content1-properties">
+            <h2>Our Newest Properties</h2>
+            <div class="properties">
+                <div class="property">
+                    <a href="property.html"></a>
+                    <img src="/photos/house1.jpeg" alt="">
+                    <div class="property-text">
+                        <p>Property Name</p>
+                        <span>Price</span>
+                    </div>
+                </div>
+                <div class="property">
+                    <a href="property.html"></a>
+                    <img src="/photos/house2.jpeg" alt="">
+                    <div class="property-text">
+                        <p>Property Name</p>
+                        <span>Price</span>
+                    </div>
+                </div>
+                <div class="property">
+                    <a href="property.html"></a>
+                    <img src="/photos/house3.jpeg" alt="">
+                    <div class="property-text">
+                        <p>Property Name</p>
+                        <span>Price</span>
+                    </div>
+                </div>
+                <div class="property">
+                    <a href="property.html"></a>
+                    <img src="/photos/house4.jpeg" alt="">
+                    <div class="property-text">
+                        <p>Property Name</p>
+                        <span>Price</span>
+                    </div>
+                </div>
+                <div class="property">
+                    <a href="property.html"></a>
+                    <img src="/photos/house5.jpeg" alt="">
+                    <div class="property-text">
+                        <p>Property Name</p>
+                        <span>Price</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <!--Footer-->
