fixing small bits
fixed the horizontal slide, making a link button to all properties page

--- a/html-files/index.html
+++ b/html-files/index.html
@@ -114,12 +114,17 @@
                         <span>Price</span>
                     </div>
                 </div>
-                <div class="property">
-                    <a href="property.html"></a>
-                    <img src="/photos/house5.jpeg" alt="">
-                    <div class="property-text">
-                        <p>Property Name</p>
-                        <span>Price</span>
+                <div class="property-continue">
+                    <div class="property-next-button">
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </div>
+                    <div id="last-property">
+                        <a href="property.html"></a>
+                        <img src="/photos/house5.jpeg" alt="">
+                        <div class="property-text">
+                            <p>Property Name</p>
+                            <span>Price</span>
+                        </div>
                     </div>
                 </div>
             </div>
