--- a/html-files/index.html
+++ b/html-files/index.html
@@ -194,7 +194,24 @@
         </div>
 
         <!--NEWSLETTER-->
-        <div>
+        <div class="newsletter">
+            <div class="newsletter-content">
+                <div class="newsletter-text">
+                    <h3>Don’t miss out on our Newsletter!</h3>
+                    <p>Get notifications whenever a potential Dream Home comes on Market</p>
+                </div>
+                <div class="nexsletter-emailbox">
+                    <div class="enter-email">
+                        <p>enter your e-mail adress</p>
+                    </div>
+                    <div class="submit-button">
+                        <p>SUBMIT</p>
+                    </div>
+                </div>
+            </div>
+            <div class="logo-background">
+                <img src="/media/example_2.png" alt="">
+            </div>
         </div>
 
     </main>
