--- a/html-files/contact.html
+++ b/html-files/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link type="text/css" rel="stylesheet" href="../css-files/header-footer.css">
+    <link type="text/css" rel="stylesheet" href="../css-files/about-contact.css">
     <meta charset="UTF-8">
     <meta name="Contact Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AKB">
@@ -32,6 +33,37 @@
 
     <!--Content-->
     <main class="page-body">
+        <h1>Do You Have A General Question, </h1>
+        <h1>Or Are You Unsure If You Want To Sell / Buy / Build Your Dream House?</h1>
+        <h3>Our Customer Support Is Open Between 9 am - 6pm From Monday To Saturday</h3>
+        <h3>We Will Respnd To Your Message As Fast As Possible</h3>
+
+        <div class="hero-image-contact">
+            <div class="hero-text-contact">
+                <form action="succesfulcontact.html" class="contactform">
+                    <ul>
+                        <li>
+                            <label for="name">Enter Your Name</label>
+                            <input type="text" id="name" name="user_name"/>
+                        </li>
+                        <br>
+                        <li>
+                            <label for="mail">Enter Your E-mail</label>
+                            <input type="email" id="mail" name="user_email"/>
+                        </li>
+                        <br>
+                        <li>
+                            <label for="message">Enter Your Message To Us</label>
+                            <textarea id="message" name="user_message"></textarea>
+                        </li>
+                        <br>
+                        <li class="formbutton">
+                            <a href="succesfulcontact.html" type="submit">Send Your Message</a>
+                        </li>
+                    </ul>
+                </form>
+            </div>
+        </div>
     </main>
 
     <!--Footer-->
