--- a/html-files/contact.html
+++ b/html-files/contact.html
@@ -33,35 +33,64 @@
 
     <!--Content-->
     <main class="page-body">
-        <h1>Do You Have A General Question, </h1>
-        <h1>Or Are You Unsure If You Want To Sell / Buy / Build Your Dream House?</h1>
-        <h3>Our Customer Support Is Open Between 9 am - 6pm From Monday To Saturday</h3>
-        <h3>We Will Respnd To Your Message As Fast As Possible</h3>
+        <div class="contact-info-box">
+          <p><b>Below You Will Find Different Options For Contacting Us</b></p>
+          <p>This Is Because We Have Different Departments Dealing With Renting, Selling, Buying And Constructing Your Dream House</p>
+          <p>We Want To Help You As Much As Possible, So Giving You The Right Person To Contact Will Give</p>
+        </div>
 
-        <div class="hero-image-contact">
-            <div class="hero-text-contact">
-                <form action="succesfulcontact.html" class="contactform">
-                    <ul>
-                        <li>
-                            <label for="name">Enter Your Name</label>
-                            <input type="text" id="name" name="user_name"/>
-                        </li>
-                        <br>
-                        <li>
-                            <label for="mail">Enter Your E-mail</label>
-                            <input type="email" id="mail" name="user_email"/>
-                        </li>
-                        <br>
-                        <li>
-                            <label for="message">Enter Your Message To Us</label>
-                            <textarea id="message" name="user_message"></textarea>
-                        </li>
-                        <br>
-                        <li class="formbutton">
-                            <a href="succesfulcontact.html" type="submit">Send Your Message</a>
-                        </li>
-                    </ul>
-                </form>
+        <div class="contact-flex">
+            <div class="hero-image-contact">
+                <div class="hero-text-contact">
+                    <p>Rent</p>
+                    <p>Do You Want To RENT Your Drean House ?</p>
+                    <p>We Have Just The Right Offer For You</p>
+                    <a href="./rent.html">Learn More</a>
+                </div>
+            </div>
+            <div class="hero-image-contact2">
+                <div class="hero-text-contact">
+                    <p>Buying</p>
+                    <p>Do You Want To BUY Your Dream House</p>
+                    <p> We Have Just The Right Deal For You</p>
+                    <a href="./buy.html">Learn More</a>
+                </div>
+            </div>
+            <div class="hero-image-contact1">
+                <div class="hero-text-contact">
+                    <p>Selling</p>
+                    <p>Do You Want SELL Your House ?</p>
+                    <p> We Have Just The Right Offer To Give You For Your House</p>
+                    <a href="./sell.html">Learn More</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="contact-flex1">
+            <div class="hero-image-contac3">
+                <div class="hero-text-contact">
+                    <p>FAQ</p>
+                    <p>Are You Curious About Us, No Worries</p>
+                    <p>Take A Look At Our Frequnelty Asked Questions</p>
+                    <a href="./faq.html">Learn More</a>
+                </div>
+            </div>
+            <div class="hero-image-contact4">
+                <div class="hero-text-contact">
+                    <p>Build</p>
+                    <p>Do You Want To BUILD Your Dream House</p>
+                    <p>We Can Offer You The Best Consturction Deal In The World</p>
+                    <p>We Have The Best Prices In The Market As Well As The Best Workers</p>
+                    <a href="./construction.html">Learn More</a>
+                </div>
+            </div>
+            <div class="hero-image-contact5">
+                <div class="hero-text-contact">
+                    <p>Are You Not Sure Which One You Want To Choice</p>
+                    <p>No Worries We Can Help You</p>
+                    <p>No Matter If You Want To Sell, Rent, Buy Or Build</p>
+                    <a href="./generall-message-request.html">Learn More</a>
+                </div>
             </div>
         </div>
     </main>
