--- a/html-files/contact.html
+++ b/html-files/contact.html
@@ -86,7 +86,7 @@
             </div>
             <div class="hero-image-contact5">
                 <div class="hero-text-contact">
-                    <p>Are You Not Sure Which One You Want To Choice</p>
+                    <p>Not Sure Which One You Want To Choice</p>
                     <p>No Worries We Can Help You</p>
                     <p>No Matter If You Want To Sell, Rent, Buy Or Build</p>
                     <a href="./generall-message-request.html">Learn More</a>
