--- a/html-files/contact.html
+++ b/html-files/contact.html
@@ -42,7 +42,7 @@
         <div class="contact-flex">
             <div class="hero-image-contact">
                 <div class="hero-text-contact">
-                    <p>Rent</p>
+                    <p class="contact-text-larger">Rent</p>
                     <p>Do You Want To RENT Your Drean House ?</p>
                     <p>We Have Just The Right Offer For You</p>
                     <a href="./rent.html">Learn More</a>
@@ -50,7 +50,7 @@
             </div>
             <div class="hero-image-contact2">
                 <div class="hero-text-contact">
-                    <p>Buying</p>
+                    <p class="contact-text-larger">Buying</p>
                     <p>Do You Want To BUY Your Dream House</p>
                     <p> We Have Just The Right Deal For You</p>
                     <a href="./buy.html">Learn More</a>
@@ -58,7 +58,7 @@
             </div>
             <div class="hero-image-contact1">
                 <div class="hero-text-contact">
-                    <p>Selling</p>
+                    <p class="contact-text-larger">Selling</p>
                     <p>Do You Want SELL Your House ?</p>
                     <p> We Have Just The Right Offer To Give You For Your House</p>
                     <a href="./sell.html">Learn More</a>
@@ -69,7 +69,7 @@
         <div class="contact-flex1">
             <div class="hero-image-contac3">
                 <div class="hero-text-contact">
-                    <p>FAQ</p>
+                    <p class="contact-text-larger">FAQ</p>
                     <p>Are You Curious About Us, No Worries</p>
                     <p>Take A Look At Our Frequnelty Asked Questions</p>
                     <a href="./faq.html">Learn More</a>
@@ -77,7 +77,7 @@
             </div>
             <div class="hero-image-contact4">
                 <div class="hero-text-contact">
-                    <p>Build</p>
+                    <p class="contact-text-larger">Build</p>
                     <p>Do You Want To BUILD Your Dream House</p>
                     <p>We Can Offer You The Best Consturction Deal In The World</p>
                     <p>We Have The Best Prices In The Market As Well As The Best Workers</p>
@@ -86,7 +86,7 @@
             </div>
             <div class="hero-image-contact5">
                 <div class="hero-text-contact">
-                    <p>Not Sure Which One You Want To Choice</p>
+                    <p class="contact-text-larger">Not Sure Which One You Want To Choice</p>
                     <p>No Worries We Can Help You</p>
                     <p>No Matter If You Want To Sell, Rent, Buy Or Build</p>
                     <a href="./generall-message-request.html">Learn More</a>
