--- a/html-files/contact.html
+++ b/html-files/contact.html
@@ -93,6 +93,27 @@
                 </div>
             </div>
         </div>
+
+        <div class="contact-business">
+            <p><b>Are You A Business?</b></p>
+            <p>If You Are A Business And You Are Interested In Hiring Us Or Work With Us</p>
+            <p>Please Use The Contact Information Below</p>
+        </div>
+
+        <div class="flex-contact row">
+            <div id="phone">
+                <p><b>Our Phone Number</b></p>
+                <p>+1 (330) 530-7972</p>
+            </div>
+            <div id="location">
+                <p><b>Our Headqurters</b><p>
+                <p>224 Park Drive, Gotham City</p>
+            </div>
+            <div id="email">
+                <p><b>Our E-mail Address</b></p>
+                <p>SqaureEyes@gmail.com</p>
+            </div>
+        </div>
     </main>
 
     <!--Footer-->
