--- a/html-files/index.html
+++ b/html-files/index.html
@@ -19,7 +19,7 @@
     <header class="page-header">
         <div id="header-logo">
             <a href="./index.html">
-                <img src="../media/example_2.png">
+                <img src="../media/logo.png">
             </a>
         </div>
         <div id="header-icons">
