--- a/html-files/contact.html
+++ b/html-files/contact.html
@@ -45,7 +45,9 @@
                     <p class="contact-text-larger">Rent</p>
                     <p>Do You Want To RENT Your Drean House ?</p>
                     <p>We Have Just The Right Offer For You</p>
-                    <a href="./rent.html">Learn More</a>
+                    <div class="contact-button">
+                        <a href="./rent.html">Learn More</a>
+                    </div>
                 </div>
             </div>
             <div class="hero-image-contact2">
@@ -53,7 +55,9 @@
                     <p class="contact-text-larger">Buying</p>
                     <p>Do You Want To BUY Your Dream House</p>
                     <p> We Have Just The Right Deal For You</p>
-                    <a href="./buy.html">Learn More</a>
+                    <div class="contact-button">
+                        <a href="./buy.html">Learn More</a>
+                    </div>
                 </div>
             </div>
             <div class="hero-image-contact1">
@@ -61,7 +65,9 @@
                     <p class="contact-text-larger">Selling</p>
                     <p>Do You Want SELL Your House ?</p>
                     <p> We Have Just The Right Offer To Give You For Your House</p>
-                    <a href="./sell.html">Learn More</a>
+                    <div class="contact-button">
+                        <a href="./sell.html">Learn More</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -72,16 +78,19 @@
                     <p class="contact-text-larger">FAQ</p>
                     <p>Are You Curious About Us, No Worries</p>
                     <p>Take A Look At Our Frequnelty Asked Questions</p>
-                    <a href="./faq.html">Learn More</a>
+                    <div class="contact-button">
+                        <a href="./faq.html">Learn More</a>
+                    </div>
                 </div>
             </div>
             <div class="hero-image-contact4">
                 <div class="hero-text-contact">
                     <p class="contact-text-larger">Build</p>
                     <p>Do You Want To BUILD Your Dream House</p>
-                    <p>We Can Offer You The Best Consturction Deal In The World</p>
                     <p>We Have The Best Prices In The Market As Well As The Best Workers</p>
-                    <a href="./construction.html">Learn More</a>
+                    <div class="contact-button">
+                        <a href="./construction.html">Learn More</a>
+                    </div>
                 </div>
             </div>
             <div class="hero-image-contact5">
@@ -89,7 +98,9 @@
                     <p class="contact-text-larger">Not Sure Which One You Want To Choice</p>
                     <p>No Worries We Can Help You</p>
                     <p>No Matter If You Want To Sell, Rent, Buy Or Build</p>
-                    <a href="./generall-message-request.html">Learn More</a>
+                    <div class="contact-button">
+                        <a href="./generall-message-request.html">Learn More</a>
+                    </div>
                 </div>
             </div>
         </div>
