--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link type="text/css" rel="stylesheet" href="../css-files/header-footer.css">
+    <link type="text/css" rel="stylesheet" href="../css-files/buy-content.css">
     <meta charset="UTF-8">
     <meta name="Buy Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AKB">
@@ -32,6 +33,15 @@
 
     <!--Content-->
     <main class="page-body">
+        <div class="flex-buy-option-setup around">
+            <div class="hero-image-chicago">
+                <div class="hero-text-all">
+                    <a href="../buy-files/chicago-proetries.html">
+                        <p><b>Chicago</b></p>
+                    </a>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!--Footer-->
