--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -33,14 +33,10 @@
 
     <!--Content-->
     <main class="page-body">
-        <div class="flex-buy-option-setup around">
-            <div class="hero-image-chicago">
-                <div class="hero-text-all">
-                    <a href="../buy-files/chicago-proetries.html">
-                        <p><b>Chicago</b></p>
-                    </a>
-                </div>
-            </div>
+        <div class="buy-info-box">
+            <p>Real Estate Agency, Is The Largest Real Estate Company In The World, Offering Real Estate Serivces All Around The World, So That You Can Find Your Dream House In The Most Simple And Quickest Way Possible.</p>
+            <p>That's Why Below We Are Giving You A Fair Shair Of Choices, Consisting Of All The Real Estate We Are Currently Selling</p>
+            <p>All Around The World, All The Way From Sunny California To Clear Beaches Of Bali</p>
         </div>
     </main>
 
