--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -38,6 +38,39 @@
             <p>That's Why Below We Are Giving You A Fair Shair Of Choices, Consisting Of All The Real Estate We Are Currently Selling</p>
             <p>All Around The World, All The Way From Sunny California To Clear Beaches Of Bali</p>
         </div>
+
+        <div class="flex-most-options">
+            <div class="popular">
+                <a href="../buy-files/most-popular.html">Most Popular Locations</a>
+            </div>
+            <div class="iconic">
+                <a href="../buy-files/iconic.html">Most Iconic Locations</a>
+            </div>
+        </div>
+
+        <div class="flex-country-options">
+            <div class="italy">
+                <a href="../buy-files/italy.html">Italy Locations</a>
+            </div>
+            <div class="switzerland">
+                <a href="../buy-files/switzerland.html">Switzerland Locations</a>
+            </div>
+            <div class="engalnd">
+                <a href="../buy-files/england.html">England Locations</a>
+            </div>
+            <div class="germany">
+                <a href="../buy-files/germany.html">Germany Locations</a>
+            </div>
+        </div>
+
+        <div class="flex-country-options1">
+            <div class="france">
+                <a href="../buy-files/france.html">France Locatons</a>
+            </div>
+            <div class="greece">
+                <a href="../buy-files/greece.html">Greece Locations</a>
+            </div>
+        </div>
     </main>
 
     <!--Footer-->
