--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -70,6 +70,42 @@
             <div class="greece">
                 <a href="../buy-files/greece.html">Greece Locations</a>
             </div>
+            <div class="poland">
+                <a href="../buy-files/poland.html">Poland Locations</a>
+            </div>
+            <div class="ireland">
+                <a href="../buy-files/irland.html">Irland Locations</a>
+            </div>
+        </div>
+
+        <div class="flex-country-options2">
+            <div class="holand">
+                <a href="../buy-files/holland.html">Holland Locations</a>
+            </div>
+            <div class="beligum">
+                <a href="../buy-files/belgium.html">Belgium Locations</a>
+            </div>
+            <div class="sweden">
+                <a href="../buy-files/sweden.html">Sweden Locations</a>
+            </div>
+            <div class="norway">
+                <a href="../buy-files/norway.html">Norway Locations</a>
+            </div>
+        </div>
+
+        <div class="flex-country-option3">
+            <div class="usa">
+                <a href="../buy-files/usa.html">USA Locations</a>
+            </div>
+            <div class="canada">
+                <a href="../buy-files/canada.html">Canada Locations</a>
+            </div>
+            <div class="wales">
+                <a href="../buy-files/wales.html">Wales Locations</a>
+            </div>
+            <div class="scotland">
+                <a href="../buy-files/scotland.html">Scotland Locations</a>
+            </div>
         </div>
     </main>
 
