--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -107,6 +107,15 @@
                 <a href="../buy-files/scotland.html">Scotland Locations</a>
             </div>
         </div>
+
+        <div class="flex-country-option4">
+            <div class="austria">
+                <a href="../buy-files/austria.html">Austria Locations</a>
+            </div>
+            <div class="croatia">
+                <a href="../buy-files/croatia.html">Croatia Locations</a>
+            </div>
+        </div>
     </main>
 
     <!--Footer-->
