--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -115,6 +115,12 @@
             <div class="croatia">
                 <a href="../buy-files/croatia.html">Croatia Locations</a>
             </div>
+            <div class="denmark">
+                <a href="../buy-files/denmark.html">Denmark Locations</a>
+            </div>
+            <div class="romania">
+                <a href="../buy-files/romaina.html">Romaina Locations</a>
+            </div>
         </div>
     </main>
 
