--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -122,6 +122,15 @@
                 <a href="../buy-files/romaina.html">Romaina Locations</a>
             </div>
         </div>
+        <div class="flex-country-option5">
+            <div class="finland">
+                <a href="../buy-files/finland.html">Finland Locations</a>
+            </div>
+            <div class="czechia">
+                <a href="../buy-files/czechia.html">Czechia Locations</a>
+            </div>
+            
+        </div>
     </main>
 
     <!--Footer-->
