--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -122,6 +122,7 @@
                 <a href="../buy-files/romaina.html">Romaina Locations</a>
             </div>
         </div>
+
         <div class="flex-country-option5">
             <div class="finland">
                 <a href="../buy-files/finland.html">Finland Locations</a>
@@ -129,7 +130,27 @@
             <div class="czechia">
                 <a href="../buy-files/czechia.html">Czechia Locations</a>
             </div>
-            
+            <div class="bulgaria">
+                <a href="../buy-files/bulgaria.html">Bulgaria Locations</a>
+            </div>
+            <div class="hungary">
+                <a href="../buy-files/hungary.html">Hungary Locations</a>
+            </div>
+        </div>
+
+        <div class="flex-country-option6">
+            <div class="luxemborg">
+                <a href="../buy-files/luxemborg.html">Luxemborg Locations</a>
+            </div>
+            <div class="malta">
+                <a href="../buy-files/malta.html">Malta Locations</a>
+            </div>
+            <div class="slovenia">
+                <a href="../buy-files/slovenia.html">Slovenia Locations</a>
+            </div>
+            <div class="estonia">
+                <a href="../buy-files/estonia.html">Estonia Locations</a>
+            </div>
         </div>
     </main>
 
