--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -152,6 +152,51 @@
                 <a href="../buy-files/estonia.html">Estonia Locations</a>
             </div>
         </div>
+
+        <div class="flex-country-option7">
+            <div class="serbia">
+                <a href="../buy-files/serbia.html">Serbia Locations</a>
+            </div>
+            <div class="lithuania">
+                <a href="../buy-files/lithuania.html">Lithuania Locations</a>
+            </div>
+            <div class="slovakia">
+                <a href="../buy-files/slovakia.html">Slovakia Locations</a>
+            </div>
+            <div class="monacco">
+                <a href="../buy-files/monacoo.html">Monaco Locations</a>
+            </div>
+        </div>
+
+        <div class="flex-country-options8">
+            <div class="latvia">
+                <a href="../buy-files/latvia.html">Latvia Locations</a>
+            </div>
+            <div class="san">
+                <a href="../buy-files/sanmarino.html">San Marino Locations</a>
+            </div>
+            <div class="faroe">
+                <a href="../buy-files/faroe-islands.html">Faroe Islands Locations</a>
+            </div>
+            <div class="gibraltar">
+                <a href="../buy-files/gibraltar.html">Gibraltar Locations</a>
+            </div>
+        </div>
+
+        <div class="flex-country-options9">
+            <div class="isle">
+                <a href="../buy-files/isle-of-man.html">Isle Of Man Locations</a>
+            </div>
+            <div class="egypt">
+                <a href="../buy-files/egypt.html">Egypt Locations</a>
+            </div>
+            <div class="south">
+                <a href="../buy-files/south-africa.html">South Africa Locations</a>
+            </div>
+            <div class="moracco">
+                <a href="../buy-files/moracco.html">Moracco Locations</a>
+            </div>
+        </div>
     </main>
 
     <!--Footer-->
