--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -197,6 +197,36 @@
                 <a href="../buy-files/moracco.html">Moracco Locations</a>
             </div>
         </div>
+
+        <div class="flex-country-options10">
+            <div class="indonasia">
+                <a href="../buy-files/indonasia.html">Indonasia Locations</a>
+            </div>
+            <div class="japan">
+                <a href="../buy-files/japan.html">Japan Locations</a>
+            </div>
+            <div class="thailand">
+                <a href="../buy-files/thailand.html">Thailand Locations</a>
+            </div>
+            <div class="uae">
+                <a href="../buy-files/uae.html">Uninted Arab Emirates Locations</a>
+            </div>
+        </div>
+
+        <div class="flex-country-options11">
+            <div class="maledives">
+                <a href="../buy-files/maledives.html">Maldives Locations</a>
+            </div>
+            <div class="singapore">
+                <a href="../buy-files/singapore.html">Singapore Locations</a>
+            </div>
+            <div class="isreal">
+                <a href="../buy-files/isreal.html">Isreal Locations</a>
+            </div>
+            <dic class="srilanka">
+                <a href="../buy-files/sri-lanka.html">Sri Lanka Locations</a>
+            </dic>
+        </div>
     </main>
 
     <!--Footer-->
