--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -223,9 +223,63 @@
             <div class="isreal">
                 <a href="../buy-files/isreal.html">Isreal Locations</a>
             </div>
-            <dic class="srilanka">
+            <div class="srilanka">
                 <a href="../buy-files/sri-lanka.html">Sri Lanka Locations</a>
-            </dic>
+            </dvc>
+        </div>
+
+        <div class="flex-country-options12">
+            <div class="austraila">
+                <a href="../buy-files/austraila.html">Austraila Locations</a>
+            </div>
+            <div class="new-zeland">
+                <a href="../buy-files/new-zeland.html">New Zeland Locations</a>
+            </div>
+            <div class="fijii">
+                <a href="../buy-files/fiji.html">Fiji Locations</a>
+            </div>
+            <div class="solmon">
+                <a href="../buy-files/solomon-islands.html">Solomon Islands Locations</a>
+            </div>
+        </div>
+
+        <div class="flex-country-options13">
+            <div class="brazil">
+                <a href="../buy-files/brazil.html">Brazil Locations</a>
+            </div>
+            <div class="mexico">
+                <a href="../buy-files/mexico.html">Mexico Locations</a>
+            </div>
+            <div class="columbia">
+                <a href="../buy-files/columbia.html">Columbia Locations</a>
+            </div>
+            <div class="argentina">
+                <a href="../buy-files/argentina.html">Argentina Locations</a>
+            </div>
+        </div>
+
+        <div class="flex-country-option14">
+            <div class="chile">
+                <a href="../buy-files/chile.html">Chile Locations</a>
+            </div>
+            <div class="cuba">
+                <a href="../buy-files/cuba.html">Cuba Locations</a>
+            </div>
+            <div class="domcican">
+                <a href="../buy-files/domician-repuvlic.html">Dominican Republic Locations</a>
+            </div>
+            <div class="costa">
+                <a href="../buy-files/costa-rica.html">Costa Rica Locations</a>
+            </div>
+        </div>
+
+        <div class="flex-last-option">
+            <div class="bahamas">
+                <a href="../buy-files/bahams.html">Bahams Locations</a>
+            </div>
+            <div class="barbados">
+                <a href="../buy-files/barbados.html">Barbados Locations</a>
+            </div>
         </div>
     </main>
 
