--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -93,6 +93,7 @@
             </div>
         </div>
 
+        <!--Checked to this one -->
         <div class="flex-country-option3">
             <div class="usa">
                 <a href="../buy-files/usa.html">USA Locations</a>
