--- a/html-files/buy.html
+++ b/html-files/buy.html
@@ -48,7 +48,7 @@
             </div>
         </div>
 
-        <div class="flex-country-options">
+        <div class="flex-container-first">
             <div class="italy">
                 <a href="../buy-files/italy.html">Italy Locations</a>
             </div>
@@ -61,9 +61,6 @@
             <div class="germany">
                 <a href="../buy-files/germany.html">Germany Locations</a>
             </div>
-        </div>
-
-        <div class="flex-country-options1">
             <div class="france">
                 <a href="../buy-files/france.html">France Locatons</a>
             </div>
@@ -78,7 +75,19 @@
             </div>
         </div>
 
-        <div class="flex-country-options2">
+        <div class="flex-container-second">
+            <div class="france">
+                <a href="../buy-files/france.html">France Locatons</a>
+            </div>
+            <div class="greece">
+                <a href="../buy-files/greece.html">Greece Locations</a>
+            </div>
+            <div class="poland">
+                <a href="../buy-files/poland.html">Poland Locations</a>
+            </div>
+            <div class="ireland">
+                <a href="../buy-files/irland.html">Irland Locations</a>
+            </div>
             <div class="holand">
                 <a href="../buy-files/holland.html">Holland Locations</a>
             </div>
@@ -93,7 +102,7 @@
             </div>
         </div>
 
-        <div class="flex-country-option3">
+        <div class="flex-container-third">
             <div class="usa">
                 <a href="../buy-files/usa.html">USA Locations</a>
             </div>
@@ -106,9 +115,6 @@
             <div class="scotland">
                 <a href="../buy-files/scotland.html">Scotland Locations</a>
             </div>
-        </div>
-
-        <div class="flex-country-option4">
             <div class="austria">
                 <a href="../buy-files/austria.html">Austria Locations</a>
             </div>
@@ -123,7 +129,7 @@
             </div>
         </div>
 
-        <div class="flex-country-option5">
+        <div class="flex-container-four">
             <div class="finland">
                 <a href="../buy-files/finland.html">Finland Locations</a>
             </div>
@@ -136,9 +142,6 @@
             <div class="hungary">
                 <a href="../buy-files/hungary.html">Hungary Locations</a>
             </div>
-        </div>
-
-        <div class="flex-country-option6">
             <div class="luxemborg">
                 <a href="../buy-files/luxemborg.html">Luxemborg Locations</a>
             </div>
@@ -152,8 +155,8 @@
                 <a href="../buy-files/estonia.html">Estonia Locations</a>
             </div>
         </div>
-        
-        <div class="flex-country-option7">
+
+        <div class="flex-container-five">
             <div class="serbia">
                 <a href="../buy-files/serbia.html">Serbia Locations</a>
             </div>
@@ -166,9 +169,6 @@
             <div class="monacco">
                 <a href="../buy-files/monacoo.html">Monaco Locations</a>
             </div>
-        </div>
-        
-        <div class="flex-country-options8">
             <div class="latvia">
                 <a href="../buy-files/latvia.html">Latvia Locations</a>
             </div>
@@ -183,7 +183,7 @@
             </div>
         </div>
 
-        <div class="flex-country-options9">
+        <div class="flex-container-six">
             <div class="isle">
                 <a href="../buy-files/isle-of-man.html">Isle Of Man Locations</a>
             </div>
@@ -196,10 +196,6 @@
             <div class="moracco">
                 <a href="../buy-files/moracco.html">Moracco Locations</a>
             </div>
-        </div>
-
-        <!--Checked to this one -->
-        <div class="flex-country-options10">
             <div class="indonasia">
                 <a href="../buy-files/indonasia.html">Indonasia Locations</a>
             </div>
@@ -214,7 +210,7 @@
             </div>
         </div>
 
-        <div class="flex-country-options11">
+        <div class="flex-container-seven">
             <div class="maledives">
                 <a href="../buy-files/maledives.html">Maldives Locations</a>
             </div>
@@ -226,10 +222,7 @@
             </div>
             <div class="srilanka">
                 <a href="../buy-files/sri-lanka.html">Sri Lanka Locations</a>
-            </dvc>
-        </div>
-
-        <div class="flex-country-options12">
+            </div>
             <div class="austraila">
                 <a href="../buy-files/austraila.html">Austraila Locations</a>
             </div>
@@ -244,7 +237,7 @@
             </div>
         </div>
 
-        <div class="flex-country-options13">
+        <div class="flex-container-eight">
             <div class="brazil">
                 <a href="../buy-files/brazil.html">Brazil Locations</a>
             </div>
@@ -257,9 +250,6 @@
             <div class="argentina">
                 <a href="../buy-files/argentina.html">Argentina Locations</a>
             </div>
-        </div>
-
-        <div class="flex-country-option14">
             <div class="chile">
                 <a href="../buy-files/chile.html">Chile Locations</a>
             </div>
@@ -274,7 +264,7 @@
             </div>
         </div>
 
-        <div class="flex-last-option">
+        <div class="flex-container-last">
             <div class="bahamas">
                 <a href="../buy-files/bahams.html">Bahams Locations</a>
             </div>
